Add list paths;